<resources>
    <string name="app_name">OscarReviews</string>
    <string name="string_best_film">Best Film</string>
    <string name="string_best_actor">Best Actor</string>
    <string name="string_best_actress">Best Actress</string>
    <string name="string_best_editing">Best Editing</string>
    <string name="string_best_effects">Best Effects</string>
    <string name="title_oscar_reviews">Write An Oscar Review</string>
    <string name="title_select_category">Select A Category</string>
    <string name="preference_url_key">preference_user_url</string>
    <string name="hint_oscar_nominee">Enter Oscar Nominee</string>
    <string name="hint_oscar_review">Enter Oscar Review</string>
    <string name="send_review_button_text">Send Review</string>
    <string name="view_review_button_text">View Reviews</string>

    <string name="preference_url_title">URL</string>
    <string name="preference_url_summary">Use this to set or change the URL</string>
    <string name="preference_user_login_name_key">preference_user_login_name</string>
    <string name="preference_user_login_name_title">Login Name</string>
    <string name="preference_user_login_name_summary">Use this to set or change your screen name</string>
    <string name="preference_user_password_key">preference_user_password</string>
    <string name="preference_user_password_title">Password</string>
    <string name="preference_user_password_summary">Use this to set or change your password</string>
    <string name="preference_main_bg_color_key">preference_main_bg_color</string>
    <string name="preference_main_bg_color_title">Main Background Color</string>
    <string name="preference_main_bg_color_summary">Set the main background color</string>
</resources>
